Fixed confirm delete what was not centered

--- a/src/index.css
+++ b/src/index.css
@@ -63,6 +63,9 @@
   color: white;
 }
 
+.confirmDeleteBtn {
+  text-align: center;
+}
 
 input {
   margin: 5px 0;
